// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElasticAgentCardComponent props button 1`] = `
<NoDataCard
  button="Button"
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  image={
    <EuiImage
      alt=""
      size="fullWidth"
      style={
        Object {
          "background": "aliceblue",
          "height": 240,
          "objectFit": "cover",
          "width": "max(100%, 360px)",
        }
      }
      url="test-file-stub"
    />
  }
  title="Add Elastic Agent"
/>
`;

exports[`ElasticAgentCardComponent props href 1`] = `
<NoDataCard
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  href="some path"
  image={
    <EuiImage
      alt=""
      size="fullWidth"
      style={
        Object {
          "background": "aliceblue",
          "height": 240,
          "objectFit": "cover",
          "width": "max(100%, 360px)",
        }
      }
      url="test-file-stub"
    />
  }
  title="Add Elastic Agent"
/>
`;

exports[`ElasticAgentCardComponent renders 1`] = `
<NoDataCard
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  image={
    <EuiImage
      alt=""
      size="fullWidth"
      style={
        Object {
          "background": "aliceblue",
          "height": 240,
          "objectFit": "cover",
          "width": "max(100%, 360px)",
        }
      }
      url="test-file-stub"
    />
  }
  title="Add Elastic Agent"
/>
`;

exports[`ElasticAgentCardComponent renders with canAccessFleet false 1`] = `
<NoDataCard
  description={
    <EuiTextColor
      color="default"
    >
      This integration is not yet enabled. Your administrator has the required permissions to turn it on.
    </EuiTextColor>
  }
  image={
    <EuiImage
      alt=""
      size="fullWidth"
      style={
        Object {
          "background": "aliceblue",
          "height": 240,
          "objectFit": "cover",
          "width": "max(100%, 360px)",
        }
      }
      url="test-file-stub"
    />
  }
  isDisabled={true}
  title={
    <EuiTextColor
      color="default"
    >
      Contact your administrator
    </EuiTextColor>
  }
/>
`;
